Update some linking

--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -17,9 +17,9 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content" id="dropdownContent">
             <a href="../../index.html">Home</a>
-            <a>____________</a>
-            <a href="pages/wiki.html">Wiki</a>
-            <a href="pages/download.html">Latest Builds</a>
+            <a class="cont-sec">____________</a>
+            <a href="wiki.html">Wiki</a>
+            <a href="downloads.html">Latest Builds</a>
         </div>
     </div>
     <div id="link_tray">
@@ -38,7 +38,7 @@
     <p>These are Lime3DS' latest releases/builds for the following platforms:</p>
   <div id="bbcon">
     <button class="build-button">Android</button>
-    <button class="build-button">Linux</button>
+    <button class="build-button">Linux</button> <br>
     <button class="build-button">Windows</button>
     <button class="build-button">MacOS</button>
   </div>
