Update drop-down class link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#about">About</a>
             <a href="#faq">FAQ</a>
             <a href="#todo">To do</a>
-            <a>____________</a>
+            <a class="cont-sec">____________</a>
             <a href="pages/wiki.html">Wiki</a>
             <a href="pages/download.html">Latest Builds</a>
         </div>
