--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -17,7 +17,7 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content" id="dropdownContent">
             <a href="../../index.html">Home</a>
-            <a style=text-align: center;">____________</a>
+            <a style="text-align: center;">____________</a>
             <a href="wiki.html">Wiki</a>
             <a href="downloads.html">Latest Builds</a>
         </div>
