Style linking isn't working

--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -17,7 +17,7 @@
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content" id="dropdownContent">
             <a href="../../index.html">Home</a>
-            <a class="cont-sec">____________</a>
+            <a style="padding-top: none; padding-bottom: none;">____________</a>
             <a href="wiki.html">Wiki</a>
             <a href="downloads.html">Latest Builds</a>
         </div>
