Use style="" and fix downloads.html link

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a href="#about">About</a>
             <a href="#faq">FAQ</a>
             <a href="#todo">To do</a>
-            <a class="cont-sec">____________</a>
+            <a style="padding-top: none; padding-bottom: none;">____________</a>
             <a href="pages/wiki.html">Wiki</a>
-            <a href="pages/download.html">Latest Builds</a>
+            <a href="pages/downloads.html">Latest Builds</a>
         </div>
     </div>
     <div id="link_tray">
