Update lime's image links

--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -28,8 +28,8 @@
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
     <div style="position: absolute; right: 5px; top: 5px;" id="container">
-        <img id="container" src="lime/lime.png" alt="Lime">
-        <img id="object" src="lime/face.png" alt="Eyes">
+        <img id="container" src="../lime/lime.png" alt="Lime">
+        <img id="object" src="../lime/face.png" alt="Eyes">
     </div>
 </div>
 
