Update css linking

--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -39,9 +39,9 @@
   <div id="bbcon">
     <button class="build-button" id="androidButton">Android</button>
     <button class="build-button" id="linuxButton">Linux</button> <br>
-    <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
-        <button class="dropbtn">Windows</button>
-        <div class="dropdown-content" id="dropdownContent">
+    <div class="dropbdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
+        <button class="dropbuild">Windows</button>
+        <div class="dropbdown-content" id="dropbdownContent">
             <a id="windowsButton1">MSVC</a>
             <a id="windowsButton2">MSYS2</a>
         </div>
