--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -147,7 +147,7 @@
         if (choice == true) {
             window.location.href = 'https://github.com/Lime3DS/Lime3DS/tree/master?tab=readme-ov-file#android';
         } else {
-            location.href = 'https://lime3ds.vercel.app/pages/downloads.html'
+            window.location.href = 'https://lime3ds.vercel.app/pages/downloads.html'
         }
         const url = await getAssetUrl('-android-universal.apk');
         if (url) {
