--- a/public/pages/downloads.html
+++ b/public/pages/downloads.html
@@ -142,16 +142,9 @@
     }
 
     document.getElementById('androidButton').addEventListener('click', async () => {
-        var choice = confirm('Manually installing Lime3DS through app install packages is not recommended. Obtainium is the supported method of installation.');
-
-        if (choice == true) {
-            window.location.href = 'https://github.com/Lime3DS/Lime3DS/tree/master?tab=readme-ov-file#android';
-        } else {
-            location.href = 'https://lime3ds.vercel.app/pages/downloads.html'
-        }
         const url = await getAssetUrl('-android-universal.apk');
         if (url) {
-            // downloadFile(url);
+            downloadFile(url);
         } else {
             alert('File not found');
         }
